# XeniaClock

./: .gitignore  .gitmodules  LICENSE  README.en.md  README.md  README.zh.md  THANKS.md  assets  gallery.md  index.html  sitemap.xml
FAQs/: index.html
README.en/: index.html
about/: index.html
credits/: index.html
docs/: mkdocs.yml
gallery/: index.html
getstarted/: index.html
hardware/: index.html  xeniaclock.kicad_sym
license/: index.html
releasenote/: index.html
search/: search_index.json
software/: README.md  index.html
software/epink-lvgl/: .gitignore  CMakeLists.txt  Kconfig  Makefile  README.md  TODO.md  lv_conf.h  main.c  memmap_default.ld
software/epink-lvgl/arch/configs/: xeniaclock_defconfig
software/epink-lvgl/clk/: README.md  clk-rp2040.h  native_clk.c  native_clk.h
software/epink-lvgl/common/: bitops.h  init.h  list.h  tools.h  types.h  vals.h
software/epink-lvgl/configs/: xeniaclock_default_defconfig
software/epink-lvgl/display/: README.md  display_manager.c  display_manager.h  ep_luat.c  epd.c  epd.h  module_manager.c  ssd1306.c  ssd1306.h  ssd1681.c  st7789v.c  st7789v.h
software/epink-lvgl/drivers/: Kconfig
software/epink-lvgl/drivers/base/: base.h  dd.c
software/epink-lvgl/drivers/clk/: Kconfig  native_clk.c  rst-rp2040.h
software/epink-lvgl/drivers/dma/: README.md
software/epink-lvgl/drivers/gpio/: README.md  gpiolib.c  gpiolib.h
software/epink-lvgl/drivers/i2c/: Kconfig  i2c-gpio.c  native_i2c.c
software/epink-lvgl/drivers/i2c/sensors/: README.md  aht10.c
software/epink-lvgl/drivers/iio/: bmp280.c
software/epink-lvgl/drivers/input/: input.c
software/epink-lvgl/drivers/input/touchscreen/: ft6x36.c
software/epink-lvgl/drivers/leds/: Kconfig  leds-ws2812b.c
software/epink-lvgl/drivers/leds/trigger/: ledtrig-heartbeat.c
software/epink-lvgl/drivers/misc/eeprom/: Kconfig  at24.c
software/epink-lvgl/drivers/mtd/: winbond.c
software/epink-lvgl/drivers/mtd/spi-nor/: core.c  core.h  winbond.c
software/epink-lvgl/drivers/mtd/spi-nor/controllers/: rpi-spi.c
software/epink-lvgl/drivers/pio/: README.md
software/epink-lvgl/drivers/power/: README.md  pm.c
software/epink-lvgl/drivers/rtc/: Kconfig  native_rtc.c  rtc_ds3231.c
software/epink-lvgl/drivers/soc/: Kconfig
software/epink-lvgl/drivers/spi/: Kconfig  native_spi.c
software/epink-lvgl/drivers/tty/: Kconfig
software/epink-lvgl/drivers/uart/: Kconfig  README.md  native_uart.c
software/epink-lvgl/drivers/video/: Kconfig  README.md  display_manager.c  ep_luat.c  epd.c  ssd1306.c  ssd1681.c  st7789v.c
software/epink-lvgl/drivers/video/font/: font.c  font.h  font_8x16.c  font_mini_4x6.c
software/epink-lvgl/extras/: easter_eggs.c
software/epink-lvgl/font/: README.md  font_8x16.c  font_mini_4x6.c
software/epink-lvgl/fs/: Kconfig  README.md  flash.c  lfs.c  lfs_util.c  ramfs.c
software/epink-lvgl/fs/hal/: implementation.h  lfs_flashbd.c  lfs_rambd.c  lfs_sdcardbd.c
software/epink-lvgl/fs/lfs/: lfs.c  lfs_test.c  lfs_util.c
software/epink-lvgl/fs/lfs/hal/: lfs_flashbd.c  lfs_rambd.c  lfs_sdcardbd.c
software/epink-lvgl/i2c/: native_i2c.c  native_i2c.h
software/epink-lvgl/include/clk/: native_clk.h
software/epink-lvgl/include/common/: bitops.h  built-in.h  compiler.h  compiler_attributes.h  compiler_types.h  conf.h  const.h  err.h  init.h  list.h  module.h  param.h  settings.h  tools.h  types.h  vals.h  version.h
software/epink-lvgl/include/fs/: fs.h
software/epink-lvgl/include/fs/hal/: lfs_rambd.h
software/epink-lvgl/include/fs/lfs/: lfs_util.h
software/epink-lvgl/include/fs/lfs/hal/: implementation.h  lfs_flashbd.h  lfs_rambd.h
software/epink-lvgl/include/i2c/: i2c-gpio.h  native_i2c.h
software/epink-lvgl/include/i2c/sensors/: aht10.h
software/epink-lvgl/include/iio/: bmp280.h
software/epink-lvgl/include/input/: input.h
software/epink-lvgl/include/input/touchscreen/: ft6x36.h
software/epink-lvgl/include/lib/: printk.h  ringbuffer_any.h
software/epink-lvgl/include/linux/: compiler.h  compiler_attributes.h  compiler_types.h  container_of.h  device.h  err.h  init.h  kobject.h  mod_devicetable.h  module.h  posix_types.h  types.h
software/epink-lvgl/include/linux/device/: bus.h  driver.h
software/epink-lvgl/include/linux/gpio/: driver.h
software/epink-lvgl/include/misc/: extras.h
software/epink-lvgl/include/mtd/: spi-nor.h
software/epink-lvgl/include/power/: pm.h
software/epink-lvgl/include/rtc/: native_rtc.h
software/epink-lvgl/include/spi/: native_spi.h
software/epink-lvgl/include/uapi/: input.h
software/epink-lvgl/include/uapi/asm-generic/: posix_types.h
software/epink-lvgl/include/uapi/linux/: types.h
software/epink-lvgl/include/video/: display_manager.h  epd.h  ssd1306.h
software/epink-lvgl/init/: Kconfig  crt1.S  main.c
software/epink-lvgl/kernel/: CMakeLists.txt  FreeRTOSConfig.h  README.md
software/epink-lvgl/lib/: CMakeLists.txt  printk.c  ringbuffer.c  ringbuffer_any.c
software/epink-lvgl/mcu/: README.md
software/epink-lvgl/misc/: Kconfig  README.md  easter_eggs.c  events.c  settings.c  themes.c  timers.c
software/epink-lvgl/net/: Kconfig  esp01s.c  esp01s.h  html2doth.py  index.h  index.html  ntp.c  sample.html  web.c
software/epink-lvgl/ota/: README.md
software/epink-lvgl/port/: README.md  lv_port_disp.c  lv_port_disp.h  lv_port_disp_vot.ctemp  lv_port_disp_vot.htemp  lv_port_fs.c  lv_port_fs.h  lv_port_indev.c
software/epink-lvgl/power/: pm.h
software/epink-lvgl/rtc/: native_rtc.c  native_rtc.h  rtc_ds3231.c  rtc_host.c
software/epink-lvgl/scripts/: build.sh  build_run_test.sh  install-debugger.sh
software/epink-lvgl/sensors/: aht10.c  aht10.h  sample.c
software/epink-lvgl/spi/: native_spi.c  native_spi.h
software/epink-lvgl/tests/: ntp_client.c  ntp_client.py  test_http_get.c  test_initcall.c  test_printk.c  test_random.c  test_strtok.c  test_types.c
software/epink-lvgl/tests/test_built_in/: Makefile  test.ld  test_built-in_file.c
squareline_studio_project/: epink_desktop.sll  epink_desktop.spj
thanks/: index.html
ui/: ui.c  ui.h  ui_comp.c  (+17 more)
(+68 files in other folders)
